--- a/tools/pdf merger/pdf-merger.html
+++ b/tools/pdf merger/pdf-merger.html
@@ -4,6 +4,118 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toolsuite: PDF Merger</title>
+    <style>
+        /* Global Minimalist Styling */
+        body {
+            font-family: 'Courier New', Courier, monospace;
+            background-color: #ffffff;
+            color: #000000;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 40px auto;
+            padding: 20px;
+        }
+
+        header {
+            border-bottom: 5px solid #000;
+            margin-bottom: 40px;
+        }
+
+        h1 {
+            font-size: 2rem;
+            text-transform: uppercase;
+            margin: 0;
+            padding-bottom: 10px;
+        }
+
+        h2 {
+            font-size: 1.2rem;
+            text-transform: uppercase;
+            border-bottom: 2px solid #000;
+            display: inline-block;
+            margin-top: 20px;
+            margin-bottom: 15px;
+        }
+
+        /* Input & Controls */
+        #input-files {
+            margin-bottom: 30px;
+        }
+
+        input[type="file"] {
+            display: block;
+            margin: 20px 0;
+            font-family: 'Courier New', Courier, monospace;
+            border: 1px solid #000;
+            padding: 10px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        button {
+            font-family: 'Courier New', Courier, monospace;
+            background-color: #000;
+            color: #fff;
+            border: 2px solid #000;
+            padding: 10px 20px;
+            text-transform: uppercase;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        button:hover:not(:disabled) {
+            background-color: #fff;
+            color: #000;
+        }
+
+        button:disabled {
+            background-color: #ccc;
+            border-color: #ccc;
+            cursor: not-allowed;
+        }
+
+        /* File List Display */
+        #fileList {
+            margin-top: 15px;
+            font-size: 0.9rem;
+        }
+
+        .file-item {
+            border: 1px dashed #000;
+            padding: 5px 10px;
+            margin-bottom: 5px;
+            background: #f9f9f9;
+        }
+
+        /* Utils */
+        hr {
+            border: none;
+            border-top: 1px solid #000;
+            margin: 40px 0;
+        }
+
+        a {
+            color: #000;
+            text-decoration: none;
+            border-bottom: 1px dotted #000;
+        }
+
+        a:hover {
+            background-color: #000;
+            color: #fff;
+        }
+
+        small {
+            display: block;
+            margin-top: 5px;
+        }
+
+        footer {
+            margin-top: 60px;
+            font-size: 0.9rem;
+        }
+    </style>
 </head>
 <body>
 
@@ -18,7 +130,7 @@
             <h2>Select Files</h2>
             <input type="file" id="pdfFileInput" accept=".pdf" multiple>
             <p>
-                <small>Hold **Ctrl** or **Cmd** to select multiple files.</small>
+                <small>Hold <strong>Ctrl</strong> or <strong>Cmd</strong> to select multiple files.</small>
             </p>
             <div id="fileList">
                 </div>
@@ -28,14 +140,14 @@
 
         <section id="controls">
             <button id="mergeButton" disabled>Merge PDFs and Download</button>
-            <p id="statusMessage" style="font-style: italic;">Awaiting file selection...</p>
+            <p id="statusMessage" style="font-style: italic; margin-top: 15px;">Awaiting file selection...</p>
         </section>
 
     </main>
 
     <footer>
         <hr>
-        <p><a href="https://project-toolsuite.vercel.app">Back to Project Toolsuite Home</a></p>
+        <p><a href="https://project-toolsuite.vercel.app">← Back to Project Toolsuite Home</a></p>
     </footer>
 
     <script src="https://unpkg.com/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
