--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
             <h2>Available Tools</h2>
             
             <nav>
-                <h3>Document & File Tools</h3>
                 <ul>
                     <li><a href="tools/pdf merger/pdf-merger.html">PDF ToolSuite</a></li>
                     <li><a href="tools/file converters/converter.html">File Converters</a></li>
                     <li><a href="tools/color palette extractor/palette.html">Image to Color Palette</a></li>
                     <li><a href="tools/qr generator/qr-generator.html">QR Generator (Text / URL)</a></li>
+                    <li><a href="tools/ocr/ocr.html">OCR Tool</a></li>
                 </ul>
             </nav>
         </section>
