Add URL Shortener link to navigation

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                     <li><a href="tools/color palette extractor/palette.html">Image to Color Palette</a></li>
                     <li><a href="tools/qr generator/qr-generator.html">QR Generator (Text / URL)</a></li>
                     <li><a href="tools/ocr/ocr.html">OCR Tool</a></li>
+                    <li><a href="tools/url shortener/shortener.html">URL Shortener</a></li>
                 </ul>
             </nav>
         </section>
