--- a/privacy.html
+++ b/privacy.html
@@ -5,21 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Manifesto | Project Toolsuite</title>
     <style>
-        /* Global Minimalist Styling (Toolsuite Standard) */
         body {
             font-family: 'Courier New', Courier, monospace;
             background-color: #ffffff;
             color: #000000;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 40px auto;
+            line-height: 1.7;
+            max-width: 860px;
+            margin: 32px auto;
             padding: 20px;
         }
 
         header {
-            border-bottom: 5px solid #000;
-            margin-bottom: 50px;
-            text-align: left;
+            border-bottom: 4px solid #000;
+            margin-bottom: 48px;
         }
 
         .logo-mark {
@@ -27,65 +25,61 @@
             text-transform: uppercase;
             letter-spacing: 2px;
             display: block;
-            margin-bottom: 10px;
+            margin-bottom: 12px;
         }
 
         h1 {
-            font-size: 2.5rem;
+            font-size: 2.2rem;
             text-transform: uppercase;
             margin: 0;
-            padding-bottom: 10px;
         }
 
         .last-updated {
-            font-style: italic;
             font-size: 0.9rem;
-            margin-top: 10px;
+            margin-top: 12px;
             border-top: 1px solid #000;
             display: inline-block;
-            padding-top: 5px;
+            padding-top: 6px;
         }
 
-        /* Card / Section Aesthetic */
         .card {
             border: 2px solid #000;
-            padding: 30px;
-            margin-bottom: 40px;
-            background: #fff;
+            padding: 28px;
+            margin-bottom: 44px;
+            background-color: #ffffff;
         }
 
         h2 {
-            font-size: 1.25rem;
+            font-size: 1.2rem;
             text-transform: uppercase;
             background-color: #000;
-            color: #fff;
+            color: #ffffff;
             display: inline-block;
-            padding: 2px 10px;
+            padding: 4px 12px;
             margin-top: 0;
-            margin-bottom: 20px;
+            margin-bottom: 22px;
         }
 
         p {
+            max-width: 720px;
             margin-bottom: 20px;
         }
 
-        /* Feature Grid - System Readout Style */
         .feature-grid {
             display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
-            margin: 30px 0;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 22px;
+            margin-top: 24px;
         }
 
         .feature {
             border: 1px dashed #000;
             padding: 20px;
-            background: #fff;
+            background-color: #ffffff;
         }
 
         .feature strong {
             display: block;
-            text-decoration: underline;
             margin-bottom: 10px;
             text-transform: uppercase;
         }
@@ -99,90 +93,96 @@
             margin-bottom: 10px;
         }
 
-        /* Footer */
         .footer {
             text-align: center;
-            padding-top: 40px;
-            border-top: 5px solid #000;
-            margin-top: 60px;
+            margin-top: 64px;
+            padding-top: 32px;
+            border-top: 4px solid #000;
         }
 
         .btn {
-            background: #000;
+            background-color: #000;
             color: #fff;
-            padding: 12px 24px;
+            padding: 12px 28px;
             border: 2px solid #000;
             text-decoration: none;
             font-weight: bold;
             text-transform: uppercase;
             display: inline-block;
-            transition: all 0.1s;
+            transition: background-color 0.2s, color 0.2s;
         }
 
         .btn:hover {
-            background: #fff;
-            color: #000;
+            background-color: #ffffff;
+            color: #000000;
         }
 
         @media (max-width: 600px) {
-            .feature-grid { grid-template-columns: 1fr; }
-            h1 { font-size: 1.8rem; }
+            h1 {
+                font-size: 1.9rem;
+            }
+
+            .feature-grid {
+                grid-template-columns: 1fr;
+            }
         }
     </style>
 </head>
 <body>
 
-<div class="wrapper">
-    <header>
-        <span class="logo-mark">TOOLSUITE PROJECT</span>
-        <h1>Privacy by Design</h1>
-        <div class="last-updated">VERSION: 2025.12</div>
-    </header>
+<header>
+    <span class="logo-mark">Toolsuite Project</span>
+    <h1>Privacy by Design</h1>
+    <div class="last-updated">Version: 2025.12</div>
+</header>
 
-    <section class="card">
-        <h2>Zero-Knowledge Architecture</h2>
-        <p>The Toolsuite project is built on a "Local-First" architecture. This means every tool runs exclusively in your browser's client-side environment.</p>
-        
-        <div class="feature-grid">
-            <div class="feature">
-                <strong>No Databases</strong>
-                We do not store your passwords, regex patterns, or design configurations.
-            </div>
-            <div class="feature">
-                <strong>No Cloud Sync</strong>
-                Your data is never transmitted to a third-party server for processing.
-            </div>
-            <div class="feature">
-                <strong>No Tracking</strong>
-                Zero cookies, zero pixels, and zero analytics scripts.
-            </div>
-            <div class="feature">
-                <strong>No Logs</strong>
-                Your inputs vanish the moment you close your browser tab.
-            </div>
+<section class="card">
+    <h2>Zero-Knowledge Architecture</h2>
+    <p>
+        Project Toolsuite follows a local-first approach. Every tool runs directly inside your browser without relying on external servers.
+    </p>
+
+    <div class="feature-grid">
+        <div class="feature">
+            <strong>No Databases</strong>
+            We do not store passwords, configurations, or any personal input.
         </div>
-    </section>
-
-    
-
-    <section class="card">
-        <h2>Data Ownership</h2>
-        <p>When you use our tools, the processing happens on your machine's hardware:</p>
-        <ul>
-            <li><strong>Security Tools:</strong> Password strength is calculated using local algorithms.</li>
-            <li><strong>Design Tools:</strong> CSS and visual effects are rendered by your own GPU.</li>
-            <li><strong>File Tools:</strong> Metadata stripping or file manipulation happens in your local RAM.</li>
-        </ul>
-    </section>
-
-    <section class="card">
-        <h2>Third-Party Services</h2>
-        <p>Toolsuite is a static project hosted on edge platforms (like GitHub Pages or Vercel). While these hosts may log standard technical data (IP, browser version), they cannot see the data processed within the tool logic itself.</p>
-    </section>
-
-    <div class="footer">
-        <a href="https://project-toolsuite.vercel.app" class="btn">Return to Tools</a>
+        <div class="feature">
+            <strong>No Cloud Sync</strong>
+            Your data is never uploaded or processed remotely.
+        </div>
+        <div class="feature">
+            <strong>No Tracking</strong>
+            No cookies, analytics, or fingerprinting scripts.
+        </div>
+        <div class="feature">
+            <strong>No Logs</strong>
+            Your data disappears the moment you close the browser tab.
+        </div>
     </div>
+</section>
+
+<section class="card">
+    <h2>Data Ownership</h2>
+    <p>
+        All processing happens locally on your device using your system’s hardware:
+    </p>
+    <ul>
+        <li><strong>Security Tools:</strong> Password analysis runs entirely in your browser.</li>
+        <li><strong>Design Tools:</strong> Visual rendering uses your local GPU.</li>
+        <li><strong>File Tools:</strong> Files are processed in memory without external transfer.</li>
+    </ul>
+</section>
+
+<section class="card">
+    <h2>Third-Party Services</h2>
+    <p>
+        Toolsuite is hosted as a static site on platforms like GitHub Pages or Vercel. While these providers may log basic technical metadata, they never access the data processed inside the tools.
+    </p>
+</section>
+
+<div class="footer">
+    <a href="https://project-toolsuite.vercel.app" class="btn">Return to Tools</a>
 </div>
 
 </body>
